<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_settings_title">

        <ListPreference
            android:title="@string/pref_hide_premade_title"
            android:key="@string/pref_hide_premade_key"
            android:dialogTitle="@string/pref_hide_premade_title"
            android:entries="@array/prefs_hide_premade_entries"
            android:entryValues="@array/pref_hide_premade_values"
            android:defaultValue="@string/pref_hide_premade_voices_default_value"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:id="@+id/lp_voice_select"
            android:key="@string/pref_voice_key"
            android:defaultValue="2owqac1jZJ71Bszwun5"
            android:title="@string/choose_your_custom_voice"
            android:dialogTitle="@string/choose_your_custom_voice"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:id="@+id/tutorial"
            android:key="@string/pref_onboard_key"
            android:entries="@array/pref_onboard_entries"
            android:entryValues="@array/pref_onboard_values"
            android:defaultValue="onboard-on"
            android:title="@string/pref_onboard_text"
            android:dialogTitle="@string/pref_onboard_text"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>