<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Thistle">


    <TextView
        android:id="@+id/tv_selected_voice"
        android:layout_width="227dp"
        android:layout_height="23dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/voice_name"
        app:layout_constraintBottom_toTopOf="@+id/edit_generated_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_generated_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:gravity="top|start"
        android:hint="@string/generate_hint"
        android:imeOptions="actionDone"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_generate_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_voice" />

    <Button
        android:id="@+id/button_generate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:gravity="center"
        android:text="@string/generate_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_generated_text" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/quick_gen_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="300dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>